<resources>
    <string name="app_name">ListaCompra</string>
    <string name="strInfo">Info:</string>
    <string name="strDeuda">Precio:</string>
    <string name="strBAnyadir">AÑADIR</string>
    <string name="strBDetalle">DETALLE</string>
    <string name="strBDeuda">PRECIO</string>
    <string name="strNombre">Nombre:</string>
    <string name="strConfiguracion">Configuración</string>
    <string name="strAbout">Acerca de...</string>
    <string name="strBorrrar">Borrar</string>
    <string name="strDetalle">Detalle</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="strPreferenciaUsuarios">Preferencias de usuario</string>
    <string name="strPreferenciasApp">Prefrerencias de aplicación</string>
    <string name="strNombreUsuario">¿Cómo le llamamos?</string>
    <string name="strMorosos">Morosos</string>
    <string name="strCargarImagenes">Cargar imágenes desde galería</string>
</resources>