<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/strPreferenciaUsuarios">

        <EditTextPreference
            android:defaultValue="Default value"
            android:key="nombre_usuario"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/strNombreUsuario" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/strPreferenciasApp">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="morosos"
            android:title="@string/strMorosos" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="cargar"
            android:title="@string/strCargarImagenes" />
    </PreferenceCategory>
</PreferenceScreen>